:tada: initial commit

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
 
-  <meta charset="UTF-8">
-  <title>Hello, 101</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <head>
+    <meta charset="utf-8">
+    <title>Fiber Example</title>
+  </head>
+  <body>
 
-</head>
+    <h1>Fiber Example</h1>
 
-<body>
+    <div class="react-mount">
+      <p>
+        To install React, follow the instructions on
+        <a href="https://github.com/facebook/react/">GitHub</a>.
+      </p>
+      <p>
+        If you can see this, React is <strong>not</strong> working right.
+        If you checked out the source from GitHub make sure to run <code>grunt</code>.
+      </p>
+    </div>
 
-  
-  <div class='react-mount'>
+    <script src="js/vendor/react.js"></script>
+    <script src="js/vendor/react-dom-fiber.js"></script>
 
-  </div>
-
-</body>
+  </body>
 
 </html>
